--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.9.1
   google_fonts: ^6.3.2
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
