--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   font_awesome_flutter: ^10.9.1
   google_fonts: ^6.3.2
   transparent_image: ^2.0.1
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
